# RealtimeSTT

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yml  install_with_gpu_support.bat  pyproject.toml  requirements-gpu.txt  setup.py
RealtimeSTT/: __init__.py  audio_input.py  audio_recorder.py  audio_recorder_client.py
RealtimeSTT_server/: README.md  index.html  install_packages.py  stt_cli_client.py  stt_server.py
example_app/: README.MD  install_cpu.bat  install_gpu.bat  start.bat  ui_openai_voice_interface.py
example_browserclient/: client.js  server.py  start_server.bat
example_webserver/: client.py  server.py  stt_server.py
tests/: README.md  advanced_talk.py  feed_audio.py  minimalistic_talkbot.py  openai_voice_interface.py  openwakeword_test.py  realtime_loop_test.py  realtimestt_chinese.py  realtimestt_speechendpoint.py  realtimestt_speechendpoint_binary_classified.py  realtimestt_test.py  realtimestt_test_hotkeys_v2.py  realtimestt_test_stereomix.py  simple_test.py  translator.py  wakeword_test.py
